--- a/style.css
+++ b/style.css
@@ -14,10 +14,11 @@ body {
   position: relative;
   top: 0;
   width: 100%;
-  background-color: #27374D;
+  background-color: #FFF;
   display: flex;
   align-items: center;
   height: 70px;
+  border-bottom: 1px solid #0f0f0f;
 }
 .header-h1 {
   margin: 0; padding: 0;
@@ -25,7 +26,7 @@ body {
 }
 .header-a {
   text-decoration: none;
-  color: #DDE6ED;
+  color: #0f0f0f;
 }
 .header-nav {
   margin: 0 0 0 auto;
