--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", メイリオ, Meiryo, "ＭＳ Ｐゴシック", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-color: #fff;
+  background-color: #f5f5f5;
 }
 
 /* header */
@@ -49,7 +49,12 @@ body {
   width: 20%;
   background-color: #fff;
   color: #27374D;
-  border-right: #0f0f0f;
+  border-right: #0f0f0f 1px solid;
+}
+
+.content-box {
+  width: 90%;
+  background-color: #fff;
 }
 
 /* footer */
