--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
 }
 /* main */
 .main-box {
+  width: 100%;
   display: flex;
   flex-direction: row;
 }
@@ -51,7 +52,9 @@ body {
   color: #27374D;
   border-right: #0f0f0f 1px solid;
 }
-
+.content {
+  width: 80%;
+}
 .content-box {
   width: 90%;
   background-color: #fff;
