--- a/style.css
+++ b/style.css
@@ -48,15 +48,18 @@ body {
 }
 .sidebar {
   width: 20%;
-  background-color: #fff;
+  background-color: #e9e9e9;
   color: #27374D;
   border-right: #0f0f0f 1px solid;
+}
+a {
+  text-decoration: none;
 }
 .content {
   width: 80%;
 }
 .content-box {
-  width: 90%;
+
   min-width: fit-content;
   background-color: #fff;
 }
