--- a/style.css
+++ b/style.css
@@ -48,8 +48,8 @@ body {
 }
 .sidebar {
   width: 20%;
-  background-color: #e9e9e9;
-  color: #27374D;
+  background-color: #27374D;
+  color: #f0f0f0;
   border-right: #0f0f0f 1px solid;
 }
 a {
